--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         opacity: 0;
         transition: opacity 0.4s ease-in-out;
         background: radial-gradient(450px circle at var(--mouse-x) var(--mouse-y), rgba(29, 185, 84, 0.15), transparent 80%);
+        pointer-events: none;
       }
 
       .spotlight-card:hover::before {
@@ -213,7 +214,6 @@
     "react-syntax-highlighter/dist/esm/styles/prism": "https://esm.sh/react-syntax-highlighter@15.5.0/dist/esm/styles/prism",
     "react-syntax-highlighter/": "https://esm.sh/react-syntax-highlighter@^15.6.1/",
     "react-motion": "https://esm.sh/react-motion@^0.5.2",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.5.136",
     "mammoth": "https://esm.sh/mammoth@1.8.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.7.0",
     "ollama": "https://esm.sh/ollama@^0.5.16"
